<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fxcaptrade.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.fxcaptrade.Home.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >

    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/nav_aboutus"-->
<!--        android:name="com.example.fxcaptrade.Home.AboutUsFragment"-->
<!--        android:label="@string/menu_about"-->
<!--        tools:layout="@layout/fragment_about" />-->

    <fragment
        android:id="@+id/nav_registration"
        android:name="com.example.fxcaptrade.Home.RegistrationFragment"
        android:label="@string/menu_registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/nav_testimony"
        android:name="com.example.fxcaptrade.Home.TestimonyFragment"
        android:label="@string/menu_testimony"
        tools:layout="@layout/fragment_testimony"/>


</navigation>