<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:orientation="vertical"
            android:paddingTop="56dp"
            android:background="@drawable/accent_bottom_curved">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textColor="@color/colorPrimaryWhite"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:fontFamily="@font/montserrat"
                android:layout_gravity="left"
               ></TextView>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/fx_factory"
           android:textStyle="bold"
           android:fontFamily="@font/montserrat"
           android:textSize="25dp"
           android:paddingLeft="16dp"
           android:textColor="@color/colorPrimaryWhite"
           android:layout_gravity="left"
           ></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"></View>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark"
                    android:hint="@string/user_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"></View>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/montserrat"
                        android:gravity="left"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"></TextView>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floating_action_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="16dp"
                        android:backgroundTint="@color/colorAccent"
                        android:clickable="true"
                        app:borderWidth="0dp"
                        app:tint="@color/colorPrimaryWhite"
                        android:contentDescription="@string/fab_content_desc"
                        android:src="@drawable/ic_login" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/toReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:foreground="?selectableItemBackground"
                        android:onClick="registration"
                        android:paddingRight="20dp"
                        android:text="Create Account"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12dp"
                        android:visibility="gone"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="1dp"
                        android:visibility="gone"
                        android:layout_height="10dp"
                        android:background="@color/colorPrimaryDark"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foreground="?selectableItemBackground"
                        android:onClick="forgotPassword"
                        android:paddingLeft="20dp"
                        android:id="@+id/forgot"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12dp"
                        android:textStyle="bold"></TextView>
                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/curved_accent"
                android:text="SUBMIT"
                android:textColor="@color/colorPrimaryWhite"
                android:visibility="gone">

            </androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>