<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="?actionBarSize"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="Company Bitcoin Wallet ADDRESS"
                        android:textAllCaps="true"
                        android:visibility="gone"
                        android:textColor="@color/colorPrimaryDark">

                    </TextView>


                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"></View>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:boxStrokeColor="@color/colorPrimaryDark"
                            app:hintTextColor="@color/colorPrimaryDark">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/companyAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/company_bitcoin_wallet_address"
                                android:inputType="none"
                                android:paddingLeft="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="5dp"
                            android:layout_height="5dp"></View>

                        <ImageButton
                            android:foreground="?selectableItemBackground"
                            android:id="@+id/copyButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="COPY"
                            android:layout_gravity="center"
                            android:background="@drawable/curved_dark"
                            android:src="@drawable/ic_copy"></ImageButton>

                    </LinearLayout>


                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/fabCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:backgroundTint="@color/colorAccentLite"
                        android:contentDescription="copy"
                        android:text="copy"
                        android:textColor="@color/colorPrimaryWhite"
                        android:visibility="gone"
                        app:icon="@drawable/ic_copy"
                        app:iconTint="@color/colorPrimaryWhite"></com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">


                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="2dp"
                            android:layout_weight="1"
                            android:background="@drawable/reg_box"
                            android:gravity="center">

                            <Spinner
                                android:id="@+id/amountSpinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"></Spinner>

                        </RelativeLayout>


                        <View
                            android:layout_width="5dp"
                            android:layout_height="0dp"></View>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:hint="@string/transferred_bitcoin"
                            app:boxStrokeColor="@color/colorPrimaryDark"
                            app:hintTextColor="@color/colorPrimaryDark">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/transferBit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">


                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"></View>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sender_wallet_address"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:hintTextColor="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/senderAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:inputType="textMultiLine"
                            android:paddingLeft="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:orientation="vertical">


                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"></View>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Hashcode"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:hintTextColor="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hashCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/reg_box"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/chooseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimaryWhite"
                        android:backgroundTint="@color/colorAccentLite"
                        android:text="@string/transaction_image"></Button>

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp"></View>

                    <TextView
                        android:id="@+id/fileName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="No file selected"
                        android:textStyle="bold"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/screenShot"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:visibility="gone"
                        android:layout_gravity="center"></ImageView>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">


                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/fabReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:backgroundTint="@color/colorAccentLite"
                        android:clickable="true"
                        android:contentDescription="@string/fab_content_desc"
                        android:elevation="5dp"
                        android:text="@string/reset"
                        android:textColor="@color/colorPrimaryWhite"
                        app:icon="@drawable/ic_reset"
                        app:iconTint="@color/colorPrimaryWhite" />


                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/fabSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:backgroundTint="@color/colorAccent"
                        android:clickable="true"
                        android:contentDescription="@string/fab_content_desc"
                        android:elevation="5dp"
                        android:text="@string/send"
                        android:textColor="@color/colorPrimaryWhite"
                        app:icon="@drawable/ic_send"
                        app:iconTint="@color/colorPrimaryWhite" />

                </RelativeLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/curved_accent"
                    android:fontFamily="@font/montserrat"
                    android:onClick="submitButton"
                    android:text="Create Account"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone">

                </androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>